[workspace]
members = [
    "crates/snos-core",
    "crates/rpc-client",
    "crates/starknet-os-types",
    "crates/rpc-replay"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# building on top of the commit: 6f89c526c4478c98c22082065a6a3e5eecd0443b on the main sequencer repo
# https://github.com/starkware-libs/sequencer
blockifier = { git = "https://github.com/Mohiiit/sequencer", rev="fe542e931c90eee7052ab4160348ad8ac296e3b9", features = ["testing"]}
starknet_api = { git = "https://github.com/Mohiiit/sequencer", rev="fe542e931c90eee7052ab4160348ad8ac296e3b9", features = ["testing"]}
starknet_os = { git = "https://github.com/Mohiiit/sequencer", rev="fe542e931c90eee7052ab4160348ad8ac296e3b9", features = ["testing"]}
starknet_patricia = { git = "https://github.com/Mohiiit/sequencer", rev="fe542e931c90eee7052ab4160348ad8ac296e3b9", features = ["testing"]}
shared_execution_objects = { git = "https://github.com/Mohiiit/sequencer", rev="fe542e931c90eee7052ab4160348ad8ac296e3b9"}

cairo-lang-starknet = { version = "=2.12.0-dev.1" }
cairo-lang-starknet-classes = { version = "=2.12.0-dev.1" }
cairo-lang-utils = { version = "=2.12.0-dev.1" }
cairo-lang-casm = { version = "=2.12.0-dev.1" }
cairo-vm = "2.2.0"
starknet = "0.16.0"
starknet-types-core = "0.1.5"

log = "0.4.19"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["arbitrary_precision"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
thiserror = "1.0.48"
flate2 = "1.0.32"
num-bigint = "0.4"
once_cell = "1.20.0"
pathfinder-gateway-types = { git = "https://github.com/Moonsong-Labs/pathfinder", rev = "9c19d9a37be8f447ec4548456c440ccbd0e44260", package = "starknet-gateway-types" }
pathfinder-common = { git = "https://github.com/Moonsong-Labs/pathfinder", rev = "9c19d9a37be8f447ec4548456c440ccbd0e44260", package = "pathfinder-common" }
pathfinder-serde = { git = "https://github.com/Moonsong-Labs/pathfinder", rev = "9c19d9a37be8f447ec4548456c440ccbd0e44260", package = "pathfinder-serde" }

serde_with = "3.3.0"
starknet-core = "0.15.0"
starknet-crypto = "0.7.0"
indoc = "2"
rstest = "0.18.2"

snos-core = { path = "crates/snos-core" }
rpc-client = { path = "crates/rpc-client" }
starknet-os-types = { path = "crates/starknet-os-types" }

