[package]
name = "rpc-client"
version.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
cairo-vm = {workspace = true}
serde_json = { workspace = true }
starknet = { workspace = true }
starknet-core = { workspace = true }
starknet_os = { workspace = true }
starknet-os-types = {workspace = true}
starknet-types-core = { workspace = true }
starknet_patricia = { workspace = true }
thiserror = { workspace = true }
blockifier = {workspace = true}
starknet_api = {workspace = true}
starknet-crypto = {workspace = true}
tokio = {workspace = true}
pathfinder-common = { workspace = true}
pathfinder-serde = {workspace = true}
num-bigint = {workspace = true}
bitvec = { version = "1.0", default-features = false, features = ["std"] }
cairo-lang-starknet-classes = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
rstest = "0.24.0"
